After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 660582 - Sound: Too small box for selection of output device
Sound: Too small box for selection of output device
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Sound
3.2.x
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
: 666414 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2011-09-30 17:19 UTC by Pedro Villavicencio
Modified: 2012-01-09 10:56 UTC
See Also:
GNOME target: ---
GNOME version: 2.31/2.32



Description Pedro Villavicencio 2011-09-30 17:19:48 UTC
this report has been filed here:

https://bugs.launchpad.net/ubuntu/+source/gnome-control-center/+bug/850032

"See the attached screenshot - it's quite difficult to get an overview of available devices when the box under the headline
"Choose a device for sound output:" barely fits one entry."

https://bugs.launchpad.net/ubuntu/+source/gnome-control-center/+bug/850032/+attachment/2402890/+files/Screenshot%20at%202011-09-14%2016%3A28%3A13.png
Comment 1 Matthias Clasen 2011-10-01 00:21:01 UTC
Yeah, that's problematic.
Comment 2 Bastien Nocera 2011-10-24 13:43:16 UTC
commit d453a9841d21314f826aa8b1be2efdb9e389669b
Author: Bastien Nocera <hadess@hadess.net>
Date:   Mon Oct 24 14:41:44 2011 +0100

    sound: Add a minimum height for the output list
    
    Combined with the changes to the output list to only
    use a single line instead of multi-line status, this should
    make it easier to see multiple devices listed.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=660582
Comment 3 Bastien Nocera 2012-01-09 10:56:18 UTC
*** Bug 666414 has been marked as a duplicate of this bug. ***