sound: Add a minimum height for the output list

Combined with the changes to the output list to only
use a single line instead of multi-line status, this should
make it easier to see multiple devices listed.

https://bugzilla.gnome.org/show_bug.cgi?id=660582